# trace

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/trace/: exception.hpp  trace.hpp  trace_exception.hpp
src/: exception.cpp  trace_exception.cpp
tests/: should_not_throw.cpp  should_throw.cpp
